--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "socket.io"       : ">=0.8.7",
     "ejs"             : ">=0.6.1",
     "colors"          : ">=0.6.0",
-    "underscore"      : ">=1.3.3"
+    "underscore"      : ">=1.3.3",
+    "mocha"           : ">=1.1.0",
+    "should"          : ">=0.6.3",
+    "nopt"            : ">=1.0.10"
   }
 }
